<resources>
    <string name="app_name">Fun With Flags</string>
    <string name="gamePickerHeading">Fun with</string>
    <string name="title">Quiz App!</string>
    <string name="subtitle">Welcome</string>
    <string name="nameLabel">Please enter your name</string>
    <string name="nameHint">Name</string>
    <string name="startBtn">Start!</string>
    <string name="question">What country does this flag belong to ?</string>
    <string name="submitBtn">SUBMIT</string>
    <string name="progress_Text">Progress</string>
    <string name="score">Your score is</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>